# NuvioTaskTracker

./: .gitignore  Cargo.toml  Dockerfile  SECURITY_PLAN.md  audit_report.md  bot_audit.md  docker-compose.yml  focusflow_plan.md
backend/: Cargo.toml
backend/src/auth/: extractor.rs  mod.rs  telegram.rs
backend/src/tasks/: dto.rs
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs  tools.rs
crates/bot/: Cargo.toml
crates/bot/src/: bot_dispatcher.rs  main.rs
crates/bot/src/auth/: extractor.rs  middleware.rs  mod.rs  telegram.rs
crates/bot/src/tasks/: routes.rs
crates/domain/: Cargo.toml
migrations/: 0001_init.sql
