[package]
name = "nuvio-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum           = "0.7"
tokio          = { version = "1", features = ["full"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
hmac           = "0.12"
sha2           = "0.10"
hex            = "0.4"
form_urlencoded = "1"
thiserror      = "1"
sqlx           = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
uuid           = { version = "1", features = ["serde"] }
time           = { version = "0.3", features = ["serde"] }
tower          = "0.4"
