[package]
name = "nuvio-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
uuid = { version = "1", features = ["serde"] }
time = { version = "0.3", features = ["serde", "parsing"] }
nuvio-domain = { path = "../domain" }
