[package]
name = "nuvio-domain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
